[package]
name = "easy-rs"
version = "0.0.1"
edition = "2021"
description = "A Rust library for reading and processing EEG and accelerometer data from .easy files."
category = "Data Processing"
authors = ["Eugene Hauptmann"]
license = "MIT"
repository = "https://github.com/eugenehp/easy"
readme = "README.md"
documentation = "https://docs.rs/easy-rs"
keywords = ["EEG", "data", "accelerometer", "file parsing", "rust"]

[dependencies]
anyhow = "1.0.95"
cargo = "0.85.0"
chrono = "0.4.39"
csv = "1.3.1"
flate2 = "1.0.35"
ndarray = "0.16.1"
serde = { version = "1.0.217", features = ["derive"] }
