[package]
name = "easy-rs"
version = "0.0.6"
edition = "2021"
description = "A Rust library for reading and processing EEG and accelerometer data from .easy files."
categories = ["Data Processing"]
authors = ["Eugene Hauptmann"]
license = "MIT"
repository = "https://github.com/eugenehp/easy"
readme = "README.md"
documentation = "https://docs.rs/easy_rs"
keywords = ["EEG", "data", "accelerometer", "parsing", "rust"]

[dependencies]
anyhow = "1.0.96"
cargo = "0.86.0"
chrono = "0.4.39"
csv = "1.3.1"
flate2 = "1.1.0"
ndarray = "0.16.1"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
